@@ -218,7 +218,9 @@ h2 {
 #content-wrapper {
   overflow-x: hidden;
 }
-
+.query-result-container {
+  overflow-x: auto;
+}
 #sidebar-wrapper {
   background: #e2e2e2;
   top: 0px;
