@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div ng-show="renderTable">
+      <div ng-show="renderTable" class="query-result-container">
         <p></p>
         <h2>Result from query</h2>
         <div class="table-responsive">
